fix minor overflow issue

--- a/resources/css/humhub.mail.css
+++ b/resources/css/humhub.mail.css
@@ -259,7 +259,7 @@
   border: none;
 }
 .mail .messages .media-list .mail-conversation-entry:last-of-type {
-  margin-bottom: 15px;
+  margin-bottom: 40px;
 }
 .mail .messages .media-list .date-divider {
   display: contents;
@@ -281,7 +281,7 @@
   background-color: #fff;
   z-index: 1;
 }
-.mail .messages .media-list .media > .media {
+.mail .messages .media-list .media {
   position: relative;
   overflow: visible;
 }
@@ -343,7 +343,7 @@
   line-height: 14px;
 }
 .mail .messages .mail-message-form {
-  padding-top: 50px;
+  padding-top: 12px;
   margin-right: -22px;
 }
 .mail .messages .mail-message-form form {
